--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -22,8 +22,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 <form name="settingsForm"  method="post" action="JiraTimetrackerSettingsWebAction.jspa"/>   
 	<div id="plugin_head" class="item-header">
  			<div class="logo-img">
-				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" >
+				<a href="http://www.everit.biz/" target="_blank">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 				</a>
 			</div>
  			<h1 class="item-summary">Timetracker Settings</h1>
