--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -67,7 +67,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 <div id="plugin_head" class="item-header" >
 	<div class="logo-img">
 		<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-		<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
+			<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 		</a>
 	</div>
 	<h1 class="item-summary" >Timetracker</h1>
